# hydrantmapper-data

./: .gitignore  README.md  jurisdictions.json  pyproject.toml
.github/workflows/: publish.yml
jurisdictions/boston-allston/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-back-bay/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-bay-village/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-beacon-hill/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-brighton/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-charlestown/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-chinatown/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-dorchester/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-downtown/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-east-boston/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-fenway/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-government-center-faneuil-hall/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-hyde-park/: hydrants.csv  intersections.json  manifest.json
jurisdictions/boston-jamaica-plain/: hydrants.csv  manifest.json  (+1 more)
scripts/: address_enrichment.py  cli.py  compute_checksums.py  generate_registry.py  validate_pack.py
tests/: conftest.py  test_address_enrichment.py  test_compute_checksums.py  test_generate_registry.py  test_validate_pack.py
(+64 files in other folders)
